# aac-ld-encoder

./: Cargo.toml  README.md
assets/: README.md
assets/reference_outputs/: test_configurations.json  test_expectations.json
assets/test_audio.py/: generate_test_signals.py
benches/: README.md  criterion_config.toml  encoding_benchmark.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  PERFORMANCE.md
examples/: README.md  batch_encoding.rs  quality_analysis.rs  real_time_streaming.rs
src/: benchmarks.rs  bitstream.rs  config.rs  encoder.rs  error.rs  lib.rs  main.rs  mdct.rs  psychoacoustic.rs  quantizer.rs  tests.rs  thread_safe.rs  utils.rs
tests/: README.md  codec_compliance.rs  integration_tests.rs  stress_tests.rs
